Removed specific reference paths from project file

--- a/FuelTransferMod/FuelTransferMod.csproj
+++ b/FuelTransferMod/FuelTransferMod.csproj
@@ -37,12 +37,8 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\Downloads\KSP_osx_0_17\KSP.app\Contents\Data\Managed\Assembly-CSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\..\Downloads\KSP_osx_0_17\KSP.app\Contents\Data\Managed\UnityEngine.dll</HintPath>
-    </Reference>
+    <Reference Include="Assembly-CSharp" />
+    <Reference Include="UnityEngine" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FuelTransferModule.cs" />
